crates/cli/tests/snapshots/setup__setup_keeps_failure_paths_together_in_wrapped_summary.snap
---
source: crates/cli/tests/setup.rs
expression: "&setup.stdout[summary..]"
---
◇  System reconciliation completed:
│  Project env reconciled for
│  1 of 5 Projects; failures:
│  app.test: filesystem error at
│  /Users/me/Code, Archive: Draft/pv.yml:
│  permission denied, blog.test:
│  Project config file conflict: both
│  /Users/me/Code, Archive: Draft/pv.yml
│  and
│  /Users/me/Code, Archive: Draft/pv.yaml
│  exist, cache.test: filesystem error
│  at `/Users/me/My Project/cache`:
│  inaccessible, env.test: Project
│  config env_file must point to a file:
│  config files/.env; Gateway runtime
│  reconciled
│
└  PV setup complete
