crates/cli/tests/snapshots/setup__setup_manifest_missing_default_plain.snap
---
source: crates/cli/tests/setup.rs
expression: output.stdout
---
PV setup
Ensured PV state layout: <tempdir>/home/.pv
Privileged helper: current 1.0.0 (protocol 1)
Shell profile integration skipped by --no-path.
Run `pv env --shell zsh`, `pv env --shell bash`, or `pv env --shell fish` for manual shell integration.
Prepared PV DNS resolver config
  path: <tempdir>/home/.pv/config/resolver/test
  DNS resolver port: <dns-port>
Installed system resolver config: <tempdir>/etc/resolver/test
Prepared PV port redirect config
  anchor path: <tempdir>/home/.pv/config/pf/com.prvious.pv
  pf.conf reference path: <tempdir>/home/.pv/config/pf/pf.conf
  HTTP redirect: 127.0.0.1:80 -> 127.0.0.1:48080
  HTTPS redirect: 127.0.0.1:443 -> 127.0.0.1:48443
Installed system pf redirect config
Prepared PV local CA
  certificate: <tempdir>/home/.pv/certificates/ca.pem
  private key: <tempdir>/home/.pv/certificates/ca-key.pem
  fingerprint: <fingerprint>
System keychain trust: not trusted
  fingerprint: <fingerprint>
Trusted PV local CA in the System keychain.
LaunchAgent installed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist
Daemon started
Daemon healthy
System reconciliation completed: stub job completed
Default Managed Resource planning failed for some defaults:
  - artifact manifest does not include Managed Resource `mysql`
PV setup completed core integrations; rerun `pv setup` after fixing the default Managed Resource manifest.
PV setup incomplete
