crates/cli/tests/snapshots/setup__setup_manifest_missing_default_terminal.snap
---
source: crates/cli/tests/setup.rs
expression: output.stdout
---
[pv] setup

┌  PV setup  ·  macOS integration
│
◇  Ensured PV state layout: <tempdir>/home/.pv
│
✓  Administrator helper installed
│  1.0.0 (protocol 1)
│
○  Shell profile integration skipped by --no-path.
│  ↳ Activate PV manually in this terminal:
│  ↳ zsh  eval "$(pv env --shell zsh)"
│  ↳ bash  eval "$(pv env --shell bash)"
│  ↳ fish  pv env --shell fish | source
│
✓  .test domains configured
│  ✓ Prepared PV DNS resolver config
│    path: <tempdir>/home/.pv/config/resolver/test
│    DNS resolver port: <dns-port>
│  ✓ .test domain routing configured
│    <tempdir>/etc/resolver/test
│
✓  Local HTTP and HTTPS configured
│  ✓ Prepared PV port redirect config
│    anchor path: <tempdir>/home/.pv/config/pf/com.prvious.pv
│    pf.conf reference path: <tempdir>/home/.pv/config/pf/pf.conf
│    HTTP redirect: 127.0.0.1:80 -> 127.0.0.1:48080
│    HTTPS redirect: 127.0.0.1:443 -> 127.0.0.1:48443
│  ✓ Local HTTP and HTTPS redirects installed
│
✓  Local HTTPS certificates trusted
│  ✓ Prepared PV local CA
│    certificate: <tempdir>/home/.pv/certificates/ca.pem
│    private key: <tempdir>/home/.pv/certificates/ca-key.pem
│    fingerprint: <fingerprint>
│  ⚠ System keychain trust: not trusted
│    fingerprint: <fingerprint>
│  ✓ PV’s local HTTPS certificate is trusted
│
✓  PV starts at login
│  ✓ LaunchAgent installed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist
│  ✓ PV started · starts at login
│  ✓ Daemon healthy
│
✓  Local HTTPS, .test domains and startup configured
│  DNS resolver · port redirect · CA trust · daemon registration
│
◇  System reconciliation completed: stub job completed
│
✗  Default Managed Resource planning failed for some defaults:
│  - artifact manifest does not include Managed Resource `mysql`
│  ↳ PV setup completed core integrations; rerun `pv setup` after fixing the default Managed Resource manifest.
│
└  ✗ PV setup incomplete
