crates/cli/tests/snapshots/setup__setup_no_path_configures_system_integrations_and_waits_for_reconciliation.snap
---
source: crates/cli/tests/setup.rs
expression: "(output, PfRedirectConfig::parse_anchor(&prepared_anchor),\nPfConfReference::parse_block(&system_pf_conf), parsed_launch_agent,\nfixture.environment.operations(), daemon_requests,)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "PV setup\nEnsured PV state layout: <tempdir>/home/.pv\nPrivileged helper: current 2.0.0 (protocol 2)\nShell profile integration skipped by --no-path.\nRun `pv env --shell zsh`, `pv env --shell bash`, or `pv env --shell fish` for manual shell integration.\nPrepared PV DNS resolver config\n  path: <tempdir>/home/.pv/config/resolver/test\n  DNS resolver port: <dns-port>\nInstalled system resolver config: <tempdir>/etc/resolver/test\nPrepared PV port redirect config\n  anchor path: <tempdir>/home/.pv/config/pf/com.prvious.pv\n  pf.conf reference path: <tempdir>/home/.pv/config/pf/pf.conf\n  HTTP redirect: 127.0.0.1:80 -> 127.0.0.1:48080\n  HTTPS redirect: 127.0.0.1:443 -> 127.0.0.1:48443\nInstalled system pf redirect config\nPrepared PV local CA\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  fingerprint: <fingerprint>\nSystem keychain trust: not trusted\n  fingerprint: <fingerprint>\nTrusted PV local CA in the System keychain.\nLaunchAgent installed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist\nDaemon started\nDaemon healthy\nSystem reconciliation completed: stub job completed\nPV setup complete\n",
        stderr: "Waiting for the reconciliation slot (elapsed: 0s)\nReconciliation slot acquired after <1s\n",
    },
    Some(
        PfRedirectConfig {
            http_port: 48080,
            https_port: 48443,
        },
    ),
    Some(
        PfConfReference,
    ),
    Some(
        LaunchAgentConfig {
            program_path: "<tempdir>/home/.pv/bin/pv",
            stdout_path: "<tempdir>/home/.pv/logs/launchd.out.log",
            stderr_path: "<tempdir>/home/.pv/logs/launchd.err.log",
        },
    ),
    [
        "install resolver <tempdir>/home/.pv/config/resolver/test -> <tempdir>/etc/resolver/test",
        "install pf <tempdir>/home/.pv/config/pf/com.prvious.pv <tempdir>/home/.pv/config/pf/pf.conf -> <tempdir>/etc/pf.anchors/com.prvious.pv <tempdir>/etc/pf.conf",
        "trust <fingerprint>",
        "bootstrap <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist",
        "kickstart com.prvious.pv.daemon",
    ],
    [
        "{\"protocol_version\":3,\"command\":\"health\"}",
        "{\"protocol_version\":3,\"command\":\"run_job\",\"kind\":\"reconcile\",\"scope\":\"system\"}",
    ],
)
