crates/cli/tests/snapshots/setup__setup_non_interactive_fails_before_privileged_system_changes.snap
---
source: crates/cli/tests/setup.rs
expression: "(output, fixture.environment.operations())"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "PV setup\nEnsured PV state layout: <tempdir>/home/.pv\n",
        stderr: "error: pv setup --non-interactive requires macOS authentication to install or replace the privileged helper.\n  Run `pv setup` interactively, then rerun with `--non-interactive`.\n",
    },
    [],
)
