crates/cli/tests/snapshots/setup__setup_non_interactive_fails_before_shell_profile_mutation.snap
---
source: crates/cli/tests/setup.rs
expression: "(output, profile_after_setup, fixture.environment.operations())"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "PV setup\nEnsured PV state layout: <tempdir>/home/.pv\nPrivileged helper: current 2.0.0 (protocol 2)\n",
        stderr: "error: Shell profile integration requires update; rerun without --non-interactive or use --no-path: <tempdir>/home/.zprofile\n",
    },
    "export EXISTING=1\n",
    [],
)
