crates/cli/tests/snapshots/setup__setup_on_a_terminal.snap
---
source: crates/cli/tests/setup.rs
expression: setup.stdout
---
[pv] setup

┌  PV setup  ·  macOS integration
│
◇  Ensured PV state layout: <tempdir>/home/.pv
│
✓  Administrator helper installed
│  2.0.0 (protocol 2)
│
◇  Backed up shell profile: <tempdir>/home/.zprofile.<timestamp>.pv.bak
│
✓  Shell profile updated: <tempdir>/home/.zprofile
│  ↳ Activate now  eval "$(pv env --shell zsh)"
│
✓  .test domains configured
│  ✓ Prepared PV DNS resolver config
│    path: <tempdir>/home/.pv/config/resolver/test
│    DNS resolver port: <dns-port>
│  ✓ .test domain routing configured
│    <tempdir>/etc/resolver/test
│
✓  Local HTTP and HTTPS configured
│  ✓ Prepared PV port redirect config
│    anchor path: <tempdir>/home/.pv/config/pf/com.prvious.pv
│    pf.conf reference path: <tempdir>/home/.pv/config/pf/pf.conf
│    HTTP redirect: 127.0.0.1:80 -> 127.0.0.1:48080
│    HTTPS redirect: 127.0.0.1:443 -> 127.0.0.1:48443
│  ✓ Local HTTP and HTTPS redirects installed
│
✓  Local HTTPS certificates trusted
│  ✓ Prepared PV local CA
│    certificate: <tempdir>/home/.pv/certificates/ca.pem
│    private key: <tempdir>/home/.pv/certificates/ca-key.pem
│    fingerprint: <fingerprint>
│  ⚠ System keychain trust: not trusted
│    fingerprint: <fingerprint>
│  ✓ PV’s local HTTPS certificate is trusted
│
✓  PV starts at login
│  ✓ LaunchAgent installed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist
│  ✓ PV started · starts at login
│  ✓ Daemon healthy
│
✓  Local HTTPS, .test domains and startup configured
│  DNS resolver · port redirect · CA trust · daemon registration
│
◇  System reconciliation completed: stub job completed
│
└  PV setup complete
